--- a/project_info.json
+++ b/project_info.json
@@ -1,1 +1,1 @@
-{"gitStatus":"REPO_CREATED","testStatus":0,"currentTestResult":true,"workingDirectory":"C:\\Users\\naaz\\MissionRnDProjects\\mrnd_cbasics"}
+{"gitStatus":"REPO_CREATED","testStatus":1,"currentTestResult":null,"workingDirectory":"C:\\Users\\naaz\\MissionRnDProjects\\mrnd_cbasics"}
